content header behind page header fixed

--- a/scss/layout/breakpoints.scss
+++ b/scss/layout/breakpoints.scss
@@ -100,15 +100,12 @@
                 bottom: $footer-height;
             }
 
-            #content > .header {
-                top: $header-height;
-            }
-
             #content {
                 @include flex-display;
 
                 > .header {
                     position: fixed;
+                    top: 0;
                     left: 0;
                     width: 50%;
                     height: auto;
